<resources>
    <string name="app_name">Bon Appetit</string>
    <string name="server_client_id">"589423648260-puh823upmm5bnng0ccnhgknp38luh5rl.apps.googleusercontent.com"</string>
    <string name="Ayran">Quench your thirst and stay healthy with our delicious ayran. Made from a perfect blend of yogurt, water, and a pinch of salt, it\'s a refreshing drink you can enjoy at any time.</string>
    <string name="Baklava">Would you like to try our delicious and fresh Turkish baklava? This sweet flavor, which we prepared with care, will leave an unforgettable mark on your palate.</string>
    <string name="Fanta">Are you looking for a refreshing and fizzy beverage to quench your thirst? Look no further! Fanta, with its crisp and fruity flavors, is the perfect choice.</string>
    <string name="IzgaraSomon">Craving a healthy and delectable meal? Our grilled salmon is the answer! Dive into a world of culinary delight with our perfectly grilled salmon, seasoned to perfection.</string>
    <string name="IzgaraTavuk">You should try our fried grilled chicken, which is soft on the inside and delicious on the outside! Our chicken, flavored with perfect spices, will take you to a taste feast with every bite.</string>
    <string name="Kadayıf">Sweeten your day with our delightful kadayıf dessert! Indulge in the perfect blend of crispy layers and sweet syrup that make kadayıf a true treat for your taste buds.</string>
    <string name="Kahve">Awaken your senses with our rich and aromatic coffee! We take pride in brewing the finest coffee beans to create a cup of perfection just for you.</string>
    <string name="Köfte">Indulge in the savory delights of our exquisite meatballs! We bring you a taste of traditional Turkish cuisine with our mouthwatering meatballs.</string>
    <string name="Lazanya">Discover the Italian culinary masterpiece with a touch of our own twist. Our lasagna is a symphony of flavors that will tantalize your taste buds.</string>
    <string name="Makarna">Experience the true essence of Italian cuisine at our restaurant. Our pasta dishes are a culinary journey to Italy, right here in Turkey! Each plate of pasta is a work of art, crafted with the finest ingredients and a dash of love.</string>
    <string name="Pizza">Indulge in the world of flavors with our exquisite pizzas at our restaurant. Our pizza creations are a symphony of taste, prepared with the freshest ingredients and a touch of culinary magic.</string>
    <string name="Su">Stay refreshed and invigorated with our pure, crystal-clear water at our restaurant. We understand that water is the essence of life, and we take pride in offering you the finest quality.</string>
    <string name="Sütlaç">Savor the sweet delight of our traditional Turkish rice pudding, Sütlaç, at our restaurant. Our rich and creamy dessert is expertly prepared to capture the authentic flavors of Turkey.</string>
    <string name="Tiramisu">Experience the Italian classic like never before at our restaurant. Our Tiramisu is a true masterpiece, created with layers of delicate ladyfingers soaked in espresso and beautifully mascarpone cheese.</string>
    <string name="all">ALL</string>
    <string name="food">FOOD</string>
    <string name="drink">DRINK</string>
    <string name="dessert">DESSERT</string>
    <string name="what_do_you_want_to_eat">What do you want to eat?</string>
    <string name="hello">Hello,</string>
    <string name="delete_from_cart">is deleted from your cart.</string>
    <string name="address_has_been_set">Your address has been saved.</string>
    <string name="location_perms_granted">Location permission is granted.</string>
    <string name="location_perms_not_granted">Location permission is not granted.</string>
    <string name="enter_email">Please enter your email.</string>
    <string name="enter_email_valid">Your enter a valid email.</string>
    <string name="password">Please enter your password.</string>
    <string name="password_short">Your password must have at least 8 characters.</string>
    <string name="passwords_not_same">Passwords that you entered must be same.</string>
    <string name="send_verification">Your email is not verified. Verification email is sent again.</string>
    <string name="email_or_pw_wrong">Email or password is wrong.</string>
    <string name="google_sign_in_failed">Google Sign-In failed.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="thank_you_order">Thank you for your order</string>
    <string name="order_soon">Your order will be with you soon. Bon Appetit!</string>
    <string name="please_enter_address">Please enter your address.</string>
    <string name="in_cart">In cart:</string>
    <string name="added_to_cart">is added to cart.</string>
    <string name="add_to_fav">is added to favourites.</string>
    <string name="delete_from_fav">is deleted from favourites.</string>
    <string name="sign_in_successful">Sign up is successful. Verification email is sent.</string>
    <string name="email_in_use">This email is already in use.</string>
    <string name="clear_cart">Cart is cleared.</string>
    <string name="order_placed">Order placed!</string>
    <string name="cart_is_empty">There is nothing in your cart to order.</string>
    <string name="address_empty">We need your address information to order.</string>
    <string name="order_number">Your order number:</string>
    <string name="current_location_is">Your current location is:</string>
    <string name="address_hint">Please enter your address here</string>
    <string name="set_address">Set My Address</string>
    <string name="get_address_on_map">Get My Address On The Map</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="password_again_hint">Password again:</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="or_login_with">Or Login With</string>
    <string name="name">Your name:</string>
    <string name="register_now_button">Register Now!</string>
    <string name="your_cart">Your Cart</string>
    <string name="total_cart">Total: (incl. VAT)</string>
    <string name="clear_cart_button">Clear Cart</string>
    <string name="order_now_button">Order Now</string>
    <string name="order_soon_at_this_address">Your order will be with you soon at this address:</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="wallet">Wallet</string>
    <string name="credit_and_payment">Credit and payment methods</string>
    <string name="order_food">Order Food</string>
    <string name="vouchers_and_offers">Vouchers and Offers</string>
    <string name="favourites">Favourites</string>
    <string name="orders_reordering">Orders &amp; reordering</string>
    <string name="view_profile">View profile</string>
    <string name="addresses">Addresses</string>
    <string name="bon_appetit_club">Bon Appetit Club</string>
    <string name="help_center">Help Center</string>
    <string name="settings">Settings</string>
    <string name="terms_conditions_privacy">Terms &amp; Conditions / Privacy</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
</resources>