<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.YemekListesiFragment" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/yemekListesiRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewYemek"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/buttonAllProducts"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <Button
            android:id="@+id/buttonFood"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <Button
            android:id="@+id/buttonDrink"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink" />

        <Button
            android:id="@+id/buttonDessert"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <android.widget.SearchView
        android:id="@+id/searchViewYemek"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/what_do_you_want_to_eat"
        android:searchIcon="@drawable/food_icon"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>