<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.fragment.RegisterFragment" >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/loginButtonStyle"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/loginButtonStyle"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/loginButtonStyle"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_hint"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPasswordAgain"
        style="@style/loginButtonStyle"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_again_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonRegister"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#039BE5"
        android:text="@string/register_now_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordAgain"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>