<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddressFragment">

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_location_is"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAdres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/address_hint"
        android:inputType="text|textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewMessage"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdresiAl"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#81C784"
        android:text="@string/get_address_on_map"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextAdres"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/editTextAdres"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetAddress" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdresiAl" />

    <Button
        android:id="@+id/buttonSetAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_address"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="#4FC3F7"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextAdres"
        app:layout_constraintStart_toStartOf="@+id/editTextAdres"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdres" />

</androidx.constraintlayout.widget.ConstraintLayout>